<resources>
    <string name="app_name">LearningAndroid</string>
    <string name="menu_home">ホーム</string>
    <string name="menu_roulette">ルーレット</string>
    <string name="menu_pair_create">ペア作成</string>
    <string name="menu_search_book">本検索</string>
    <string name="menu_git_hub">GitHub</string>

    <!-- Hyperion -->
    <string name="hyperion_plugin_title">APIデバッグ設定</string>
    <string name="hyperion_plugin_description">APIレスポンスを変更します</string>


    <!-- 共通 -->
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="register">登録</string>
    <string name="delete">削除</string>
    <string name="result">結果</string>

    <!-- GitHubメニュー -->
    <string name="title_user_name">ユーザ名を入力してください</string>
    <string name="hint_search_user_name">ユーザ名</string>
    <string name="github_menu_header_title">リポジトリ一覧</string>

    <!-- register dialog -->
    <string name="hint_limit_10">（全角10文字以内）</string>
    <string name="start_roulette">ルーレット開始</string>
    <string name="zero_match_text">ルーレットを開始するためのリストを登録してください</string>
    <string name="already_register_error_text">既に登録済みです</string>
    <string name="already_delete_error_text">削除に失敗しました</string>

</resources>