<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navHome"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navRoulette"
        android:title="@string/menu_roulette"
        android:icon="@drawable/ic_autorenew"
        app:showAsAction="ifRoom"/>
<!--    <item-->
<!--        android:id="@+id/navPairCreate"-->
<!--        android:title="@string/menu_pair_create"-->
<!--        android:icon="@drawable/ic_group"/>-->
    <item
        android:id="@+id/navSearchBook"
        android:title="@string/menu_search_book"
        android:icon="@drawable/ic_book"/>
    <item
        android:id="@+id/navGitHub"
        android:title="@string/menu_git_hub"
        android:icon="@drawable/ic_api"
        app:showAsAction="ifRoom"/>
</menu>