<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="com.learningandroid.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navPairCreate"
        android:name="com.learningandroid.PairCreateFragment"
        android:label="@string/menu_pair_create"
        tools:layout="@layout/fragment_pair_create" />

    <fragment
        android:id="@+id/navRoulette"
        android:name="com.learningandroid.RouletteFragment"
        android:label="@string/menu_roulette"
        tools:layout="@layout/fragment_roulette" />
</navigation>